# Process this file with autoconf to produce a configure script.
AC_INIT(init/color3d.c)
AC_CONFIG_AUX_DIR(config)
AM_INIT_AUTOMAKE(viewcasts, 0.5)
AM_CONFIG_HEADER(config.h)
AM_CONDITIONAL(USE_GL, test "$enable_gl" = yes)

# Checks for programs.
AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_LIBTOOL
AC_PROG_INSTALL
AM_PROG_AS
AC_PATH_PROG(UIL, uil)
NOWEAVE=/usr/people/ivas/bin/noweave
NOTANGLE=/usr/people/ivas/bin/notangle
# Programs 
AC_SUBST(NOWEAVE)
AC_SUBST(NOTANGLE)

# Checking for host
#AC_CANONICAL_HOST
AC_MSG_CHECKING(target "$host")
case "$host" in
	*-sun*)
	AC_DEFINE(HAVE_SUN,1,
		       [Define if we are on the SUN platform])
    GLCOLORCHOOSER=' '
    SGMLIB=' '
    SGMLIB=' '
    FLEXlm="./FLEXlmSUN"
	;;
	*-hp*)
	AC_DEFINE(HAVE_HP,1,
		       [Define if we are on the HP platform])
    GLCOLORCHOOSER=' '
    SGMLIB=' '
    FLEXlm="./FLEXlmHP"
	;;
	*-linux*)
	AC_DEFINE(HAVE_LINUX,1,
		       [Define if we are on the Linux platform])
    GLCOLORCHOOSER=' '
    SGMLIB=' '
    CFLAGS="$CFLAGS $X_CFLAGS"
    CCASFLAGS="-x assembler-with-cpp"
    FLEXlm="./FLEXlmLINUX"
	;;
	*-sgi*)
	AC_DEFINE(HAVE_SGI,1,
		       [Define if we are on the SGI platform])
    AC_DEFINE(HAVE_MOTIF12, 1,
               [Define if we have Motif 1.2 ])
    AC_DEFINE(FLEXLM, 1,
              [Define if we build with FLEXlm ])	       
    AC_DEFINE(EIN, 1,
              [Define if we build with FLEXlm ])
    AC_DEFINE(AUS, 2,
              [Define if we build with FLEXlm ])
    GLCOLORCHOOSER='-lGLColorChooser'
    SGMLIB='-lSgm'
    FLEXlm="./FLEXlm"
    LIBS=$GL_LIBS
    ;;
	*)
    # Assume other unices
    GLCOLORCHOOSER=' '
    SGMLIB=' '
    ;;
esac	
AC_SUBST(GLCOLORCHOOSER)
AC_SUBST(SGMLIB)
AC_SUBST(CFLAGS)
AC_SUBST(CCASFLAGS)
AC_SUBST(FLEXlm)
					 				 
MDL_HAVE_OPENGL
AC_SEARCH_LIBS(glVertex3f, GL)
#C3D_PKG_X11
AC_PATH_XTRA

# Checks for libraries.
# FIXME: Replace `main' with a function in `-lBXm_sgi':
AC_CHECK_LIB([BXm], [main])
# FIXME: Replace `main' with a function in `-lGL':
AC_CHECK_LIB([GL], [glVertex3f])
# FIXME: Replace `main' with a function in `-lGLU':
AC_CHECK_LIB([GLU], [gluSphere])
# FIXME: Replace `main' with a function in `-lGLw':
AC_CHECK_LIB([GLw], [main])
# FIXME: Replace `main' with a function in `-lMrm':
AC_CHECK_LIB([Mrm], [main])
# FIXME: Replace `main' with a function in `-lX11':
AC_CHECK_LIB([X11], [XLookupString])
# FIXME: Replace `main' with a function in `-lXext':
AC_CHECK_LIB([Xext], [main])
# FIXME: Replace `main' with a function in `-lXm':
AC_CHECK_LIB([Xm], [XmCreateDrawingArea])
# FIXME: Replace `main' with a function in `-lXmu':
AC_CHECK_LIB([Xmu], [main])
# FIXME: Replace `main' with a function in `-lXt':
AC_CHECK_LIB([Xt], [XtAppInitialize])
# FIXME: Replace `main' with a function in `-lc':
AC_CHECK_LIB([c], [main])
# FIXME: Replace `main' with a function in `-lglut':
AC_CHECK_LIB([glut], [glutInit])
# FIXME: Replace `main' with a function in `-lm':
AC_CHECK_LIB([m], [cos])

# Checks for header files.
AC_HEADER_DIRENT
AC_HEADER_STDC
AC_CHECK_HEADERS([stdio.h fcntl.h limits.h malloc.h stddef.h stdlib.h string.h sys/time.h unistd.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_SIZE_T
AC_HEADER_TIME

# Checks for library functions.
AC_FUNC_VPRINTF
AC_CHECK_FUNCS([bzero floor gettimeofday memmove memset pow putenv sqrt strcasecmp strdup strerror strncmp strrchr strstr])


AC_MSG_RESULT([
$PACKAGE is using the following for compiling and linking OpenGL programs:

  GL_CFLAGS: $GL_CFLAGS
    GL_LIBS: $GL_LIBS
])

AC_OUTPUT( Makefile
                 graphics/Makefile
                 init/Makefile
                 ioclient/Makefile
                 lib/Makefile
                 lib/malloc/Makefile
                 lib/opengllib/Makefile
		 lib/utilii/Makefile
                 lib/widgets/Makefile
                 lib/image/Makefile
                 lib/cii/Makefile
                 lib/cii/src/Makefile
                 lib/cii/include/Makefile
                 lib/cii/examples/Makefile
		 include/Makefile
	         bxwidgets/Makefile
	         bxwidgets/include/Makefile
		 bxwidgets/lib/Makefile
                 motif/Makefile)
