## 
##
##
##
##
##
EXTRA_DIST = aux.h keysymdef.h strukturen.h \
	     color3d.h mesh.h trackball.h \
	     colormap.h motif.h uil.h \
	     eprintf.h pattern.h unv_ds.h \
	     grafik.h paulslib.h utilh.h \
	     grafik_func.h read_unv.h widgets.h \
	     hilfs_func.h rgbfarben.h xy_plot_tt.h \
	     add_text_table_line.h iso.h sovLayerUtil.h \
	     errs.h memory.h genlist.h gendlist.h genstack.h \ 
             glut.h img.h shade.h createmovie.h \
             image.h sgiobj.h \
             ColorChooser/ColorC.h ColorChooser/ColorCP.h ColorChooser/ColorChooserSwatch.h \
	     ColorChooser/ColorHexagon.h ColorChooser/GLColorSliderGadget.h ColorChooser/GLColorSliderGadgetC.h \
	     ColorChooser/GLColorSliderManager.h ColorChooser/GLColorSliderManagerC.h \
	     ColorChooser/SgColor.h ColorChooser/SgList.h
