##
##
##
##
##
include_HEADERS= BXm.h HelpBox.h HelpTextI.h RegexI.h TextTable.h \
BXmAll.h HelpBoxP.h HelpTextP.h RegexP.h TextTableGC.h \
BXmConst.h HelpGen.h ScrollMan.h TextTableP.h \
BXmRes.h HelpShell.h ScrollManP.h \
Center.h HelpShellP.h TableMan.h \
CenterP.h HelpText.h Regex.h TableManP.h 
