##
##
##
##
LIBCII = $(top_builddir)/lib/cii/src/libcii.la 
LIBS =
INCLUDES = -I../include
bin_PROGRAMS = basename calc cref double idents ids \
iref kref mpcalc  wf words xref
basename_SOURCES = basename.c
basename_LDADD = $(LIBCII)
calc_SOURCES = calc.c
calc_LDADD = $(LIBCII)
cref_SOURCES = cref.c integer.c integer.h
cref_LDADD = $(LIBCII)
double_SOURCES =  double.c 
double_LDADD = $(LIBCII)
idents_SOURCES = idents.c
idents_LDADD = $(LIBCII)
ids_SOURCES = ids.c
ids_LDADD = $(LIBCII)
iref_SOURCES = iref.c
iref_LDADD = $(LIBCII)
kref_SOURCES = kref.c
kref_LDADD = $(LIBCII)
mpcalc_SOURCES =  mpcalc.c 
mpcalc_LDADD = $(LIBCII)
wf_SOURCES =  wf.c getword.c getword.h
wf_LDADD = $(LIBCII)
words_SOURCES = words.c
words_LDADD = $(LIBCII)
xref_SOURCES = xref.c getword.c getword.h
xref_LDADD = $(LIBCII)

