##
##
##
##
##
AM__CFLAGS=-x assembler-with-cpp 
MAINTAINERCLEANFILES = Makefile.in
INCLUDES = -I$(top_builddir)/lib/cii/include -I../include
noinst_LTLIBRARIES = libcii.la
libcii_la_SOURCES = ap.c \
arena.c \
arith.c \
array.c \
assert.c \
atom.c \
bit.c \
chan.c \
except.c \
fmt.c \
list.c \
mem.c \
memcmp.c \
memmove.c \
mp.c \
ring.c \
seq.c \
set.c \
stack.c \
str.c \
strerror.c \
strncmp.c \
swtch.s \
table.c \
text.c \
thread.c \
xp.c


